# routes/index.js
@@ -1,9 +1,17 @@
 const express = require('express');
+const { getAllRecipes } = require('../controllers/recipes');
 const router = express.Router();
+const swaggerAutogen = require('swagger-autogen')();
 
 router.use('/', require('./swagger')); 
-router.use('/recipes', require('./recipes'));
-router.use('/conversions', require('./conversions'));
+router.use('/recipes', require('./recipes')
+    /* 
+        #swagger.tags = ['recipes']
+    */
+    );
+router.use('/conversions', require('./conversions') 
+     //   #swagger.tags = ['conversions']  
+);
 
 
 module.exports = router;
