# swagger-output.json
@@ -7,6 +7,16 @@
   },
   "host": "cse341project2ae.onrender.com",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "recipes",
+      "description": ""
+    },
+    {
+      "name": "conversions",
+      "description": ""
+    }
+  ],
   "schemes": [
     "https"
   ],
@@ -23,6 +33,9 @@
     },
     "/recipes/": {
       "get": {
+        "tags": [
+          "recipes"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -37,6 +50,9 @@
         }
       },
       "post": {
+        "tags": [
+          "recipes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -76,6 +92,9 @@
     },
     "/recipes/{id}": {
       "get": {
+        "tags": [
+          "recipes"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -98,6 +117,9 @@
         }
       },
       "put": {
+        "tags": [
+          "recipes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -141,6 +163,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "recipes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -162,6 +187,9 @@
     },
     "/conversions/": {
       "get": {
+        "tags": [
+          "conversions"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -176,6 +204,9 @@
         }
       },
       "post": {
+        "tags": [
+          "conversions"
+        ],
         "description": "",
         "parameters": [
           {
@@ -209,6 +240,9 @@
     },
     "/conversions/{id}": {
       "get": {
+        "tags": [
+          "conversions"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -231,6 +265,9 @@
         }
       },
       "put": {
+        "tags": [
+          "conversions"
+        ],
         "description": "",
         "parameters": [
           {
@@ -268,6 +305,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "conversions"
+        ],
         "description": "",
         "parameters": [
           {
